# basics_of_ai

./: pyproject.toml
task_1/: main.py
task_2/: main.py
task_3/: classification.py  regression.py
task_4/: main.py
task_5/: main.py  transformed_sales_data.xlsx  your_report.html
